syntax = "proto3";

package modringpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/modringpb";

import "mir/codegen_extensions.proto";

// ============================================================
// Events
// ============================================================

message Event {
  option (mir.event_class) = true;

  oneof type {
    option (mir.event_type) = true;

    FreeSubmodule free = 1;
  }
}

message FreeSubmodule {
  option (mir.event) = true;

  uint64 id = 1;
}


// ============================================================
// Data structures
// ============================================================
